# company-data

./: Dockerfile  README.md  docker-compose.yaml  openapi.yaml  requirements.txt  setup.cfg
src/openapi_server/: main.py
src/openapi_server/apis/: company_api.py
src/openapi_server/models/: company.py  error.py  full_date.py  officer.py  official_address.py  partial_date.py
src/openapi_server/service/: http.py  third_party_a.py  third_party_b.py  validation.py
tests/openapi_server/apis/: test_company_api.py
tests/openapi_server/service/: test_third_party_a.py  test_third_party_b.py  test_validation.py
