[metadata]
name = openapi_server
version = 1.0.0
description = Service to get information about companies across different jurisdictions
long_description = file: README.md
keywords = OpenAPI OpenAPI Company data
python_requires = >= 3.9.*
classifiers =
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9

[options]
install_requires = fastapi[all]
setup_requires = setuptools
package_dir = =src
packages = find_namespace:

[options.packages.find]
where = src
